--- a/recipe-pro-client/package.json
+++ b/recipe-pro-client/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.447.0",
